@@ -783,6 +783,8 @@ typedef struct xterror_struct
 #define NS_XMPP_TLS  "urn:ietf:params:xml:ns:xmpp-tls"
 #define NS_XMPP_STREAMS "urn:ietf:params:xml:ns:xmpp-streams"
 
+#define NS_JABBERD_STOREDPRESENCE "http://jabberd.org/ns/storedpresence"
+
 
 /* --------------------------------------------------------- */
 /*                                                           */
